fix left user_nav align problem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,8 +37,8 @@ input {background:#ebebeb; border:solid 1px #ccc;}
 #user_nav{	float:left;	width: 220px;	padding: 10px 10px;	margin-top: -11px;	position:absolute;}
 #CoC_frame{	width:170px;	margin: 16px 0 10px 50px;	padding: 0px;}
 #CoC_pic{float:left;}
-#CoC_right{width:120px;float:right;}
-#CoC_name{padding:0 10px; float:left;}
+#CoC_right{width:110px;float:right;}
+#CoC_name{padding:0 4px; float:left; margin-bottom:10px;}
 #nav_list_frame{position:relative;}
 #nav_list_header, #member_list_header{font-weight:normal;margin-bottom:6px;margin-left:50px;}
 #nav_list_highlight{z-index:-1;background-color:#FFF; position:absolute;width:241px;height:24px; margin-left:-10px;border-top:solid 1px #CCC;border-bottom:solid 1px #CCC;}
